--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,7 @@ nav{
 
 .content{
     margin-top: auto;
-    width: 100vw;
+    width: 100%;
     height: 700px;
     background-color: aquamarine;
 }
