--- a/css/main.css
+++ b/css/main.css
@@ -1,58 +1,59 @@
-
-
-
 body {
     margin: 0px;
     padding: 0px !important;
-    -webkit-box-sizing: border-box ;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
-nav{
-        
-        width: 100%;
-        height: 90px;
-       
-        background-color: black;
+nav {
+
+    width: 100%;
+    height: 90px;
+
+    background-color: black;
 }
 
-	nav ul{
-			height: auto;
-			padding: 32px;
-            float: right;
-			}
-       
-     nav li{
-			display: inline;
-			padding: 18px;
-			font-size: 12px;
-            font-family: 'Montserrat', sans-serif;
-			font-weight: 700;
-            text-transform: uppercase;
-			letter-spacing: 4px;
-			
-			}
-       
-     nav a{ /* hyper */
-			text-decoration: none;
-			color: white;
-            transition: all 1s ease; /* default state for hover */
-			}
+nav ul {
+    height: auto;
+    padding: 32px;
+    float: right;
+}
 
-    nav a:hover {
-			color: orangered;
-			}
+nav li {
+    display: inline;
+    padding: 18px;
+    font-size: 12px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+
+}
+
+nav a {
+    /* hyper */
+    text-decoration: none;
+    color: white;
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
+    /* default state for hover */
+}
+
+nav a:hover,
+.facebook i:hover {
+    color: orangered;
+}
 
 
 
-.content{
+.content {
     margin-top: auto;
     width: 100%;
     height: 700px;
 
 }
 
-.about{
+.about {
     width: 100%;
     height: 700px;
     background-image: url(../img/tools.jpg);
@@ -60,15 +61,7 @@ nav{
     z-index: 0;
 }
 
-
-.fab{
-    width: 50px;
-    height: 50px;
-    margin-left: 450px;
-    padding-top: 60px;
-    z-index: 5;
-}
-.logocontainer{
+.logocontainer {
     height: 100px;
     position: absolute;
     margin-top: -50px;
@@ -76,12 +69,31 @@ nav{
     margin-left: 60px;
     background-color: white;
     z-index: 3;
-    
+
 }
 
+.infocontainer {
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+}
 
+.facebook {
+    position: absolute;
+    right: 0;
+    margin-right: 900px;
+    margin-top: 610px;
+}
 
-.about .info{
+.facebook i {
+    font-size: 50px;
+    color: #000;
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
+}
+
+.about .info {
     background-color: black;
     color: #fff;
     height: 300px;
@@ -90,10 +102,10 @@ nav{
     position: absolute;
     margin-top: 300px;
     right: 0px;
-    
+
 }
 
-.about .info h1{
+.about .info h1 {
 
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
@@ -101,15 +113,15 @@ nav{
     font-size: 30px;
 }
 
-.about .info p{
+.about .info p {
     margin-top: 40px;
-   font-family: 'Lato', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 18px;
 }
 
 /** LOCATION **/
 
-.location h2{
+.location h2 {
     margin: 30px 100px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
@@ -119,7 +131,7 @@ nav{
 
 .location .map-wrapped {
     margin: 10px 100px 200px 100px;
-    background-size: 
+    background-size:
 }
 
 .location .info-location {
@@ -135,33 +147,11 @@ footer {
     color: #fff;
 }
 
-p2{
+p2 {
     font-family: 'Lato', sans-serif;
     width: auto;
     float: right;
     margin-right: 60px;
     padding-top: 20px;
-    
+
 }
-
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-}
-
-
-
